[gd_scene load_steps=12 format=3 uid="uid://bhfxjbkoqn8qa"]

[ext_resource type="Script" uid="uid://61k631ol6jtb" path="res://scripts/actors/Actor3D.gd" id="1_1vj7a"]
[ext_resource type="Shader" uid="uid://bi4eax54yd1bh" path="res://scripts/shaders/ProgressBar.gdshader" id="2_ykgun"]
[ext_resource type="AudioStream" uid="uid://de4gw5lf53lod" path="res://assets/sfx/step.wav" id="3_iy33i"]
[ext_resource type="AudioStream" uid="uid://c4h2m1kvf85yi" path="res://assets/sfx/attack.wav" id="4_jdsyw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hk0x4"]
radius = 0.544541
height = 2.0326

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1vj7a"]

[sub_resource type="QuadMesh" id="QuadMesh_iy33i"]
size = Vector2(1, 0.2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jdsyw"]
render_priority = 0
shader = ExtResource("2_ykgun")
shader_parameter/use_billboard = true
shader_parameter/color = Color(0, 0.8, 0, 0.8)
shader_parameter/background_color = Color(0.4, 0.4, 0.4, 0.8)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ykgun"]
emission_shape = 1
emission_sphere_radius = 0.5
angle_min = 1.07288e-05
angle_max = 180.0
velocity_pivot = Vector3(0, 1, 0)
direction = Vector3(0, 3, 0)
initial_velocity_min = 1.0
initial_velocity_max = 5.0
gravity = Vector3(0, -5, 0)
radial_accel_min = -2.23517e-06
radial_accel_max = 0.999998
damping_max = 2.0
scale_min = 0.2
scale_over_velocity_max = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fnojs"]
albedo_color = Color(1, 0.0235294, 0.0352941, 1)

[sub_resource type="SphereMesh" id="SphereMesh_iy33i"]
material = SubResource("StandardMaterial3D_fnojs")
radius = 0.1
height = 0.2
radial_segments = 8
rings = 8

[node name="Actor3D" type="CharacterBody3D" groups=["actor"]]
collision_mask = 7
script = ExtResource("1_1vj7a")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02073, 0)
shape = SubResource("CapsuleShape3D_hk0x4")

[node name="CapsuleMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03443, 0)
mesh = SubResource("CapsuleMesh_1vj7a")

[node name="label_name" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.62198, 0)
visible = false
pixel_size = 0.008
billboard = 2
double_sided = false
fixed_size = true
alpha_antialiasing_edge = 0.5
texture_filter = 1
modulate = Color(0, 2.88785e-07, 0.501557, 1)
outline_modulate = Color(0.912289, 0.912289, 0.912289, 1)
text = "Name"
font_size = 36
outline_size = 5

[node name="light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.177598, 0)
light_color = Color(0.999419, 0.950618, 0.810217, 1)
light_energy = 0.8
light_size = 1.0
omni_range = 2.39242

[node name="bar_hp" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.29908, 0.00375533)
instance_shader_parameters/health = 0.289
mesh = SubResource("QuadMesh_iy33i")
surface_material_override/0 = SubResource("ShaderMaterial_jdsyw")

[node name="damage_effect" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0474854, 0.681732, 0)
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_ykgun")
draw_pass_1 = SubResource("SphereMesh_iy33i")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]

[node name="Model" type="Node3D" parent="."]

[node name="sounds" type="Node" parent="."]

[node name="attack" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("4_jdsyw")

[node name="walk" type="AudioStreamPlayer3D" parent="sounds"]
stream = ExtResource("3_iy33i")
max_distance = 15.0
bus = &"Sfx"

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 27.0
text = "TEST"
horizontal_alignment = 1

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.66422, 0)

[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
